# optimize

./: .gitignore  README.md
ampl/: simplemoon.mod  simplemoon_mint.mod  simplemove_linearacc.mod  simplemove_nofinalv.mod  simplemove_radialarm.mod
doc/: report-part-jd.txt  report.bib  report.tex
doc/idea/: base.eps  diagram.graffle  idea.tex  step1.eps  step2.eps  step3.eps  step4.eps
experiments/ampl/: commands.ampl  thrust.ampl
experiments/haskell/: GenC.hs  GenExpr.hs  GenObjective.hs  GenOperators.hs  GenSimplify.hs  GenTest.hs
experiments/lbfgs/: Makefile  objfun.c  test_lbfgs.c  thrust.c
experiments/thrust/: thrust.m  thrustregion.m
matlabcode/: GradPowell.m  HessPowell.m  PowellQuadFunc.m  bfgs.m  linesearch.m  newton.m
platform/: CMakeLists.txt  test.def
platform/src/: CMakeLists.txt  main.c  parser.c  parser.h  problem.c  problem.h  render.c  render.h  scanner.c  scanner.h
solver/: Makefile  main.c  region.c  region.h  util.c  util.h
visualize/: sample1.def  vector.py  visualize.py
